package one;

public abstract class Item {
    protected String itemName;
    protected String itemDescription;

    protected String getItemName() {
        return itemName;
    }

    protected String getItemDescription() {
        return itemDescription;
    }

    protected void monsterReward() {

    }
}
